[package]
name = "leo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
futures-util = "0.3.28"
pin-project-lite = "0.2.4"
http-body-util = "0.1.0-rc.2"
log = "0.4.20"