[package]
name = "leo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
bytes = "1.4.0"
http = "0.2.9"
httparse = "1.8.0"
log = "0.4.20"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
pretty_env_logger = "0.5"
