[package]
name = "libra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.20"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tokio-native-tls = {version = "0.3", optional = true}
